<resources>
    <string name="app_name">TrackingSystem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navi_home">Home</string>
    <string name="navi_students_manifest">Students</string>
    <string name="navi_logout">Logout</string>
    <string name="navi_camera">Camera</string>
    <string name="navi_notification">Notification</string>
    <string name="navi_help">help</string>
    <string name="navi_setting">Setting</string>
    <string name="navi_bus_location">Location</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!--string name="google_api_key">AIzaSyA0wq3APzfaU_oC90VhbEMBMZyN_rU98Ms</string-->
    <string name="login_text">School Bus Tracking®</string>
    <string name="login_phone">Phone</string>
    <string name="login_password">Password</string>
    <string name="sigup_register">Register</string>

    <string-array name="setting">
        <item>Contacts</item>
        <item>Change Profile</item>
        <item>Change Password</item>
        <item>Change Language</item>
        <item>Delete Account</item>
    </string-array>

    <string name="subscribe_to_notification">Subscribe for notification</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed succeed!</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Notification</string>
    <string name="send_notification">send notification to students</string>

</resources>
