<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/navi_home" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/location"
            android:icon="@drawable/marker"
            android:title="@string/navi_bus_location" />
    </group>
    <group android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/students"
            android:icon="@drawable/users"
            android:title="@string/navi_students_manifest" />
    </group>
    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/notification"
            android:icon="@drawable/comments"
            android:title="@string/navi_notification" />
    </group>
    <group
        android:id="@+id/group5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/setting"
            android:icon="@drawable/setting"
            android:title="@string/navi_setting" />
    </group>
    <group
        android:id="@+id/group6"
        android:checkableBehavior="single">
        <item
            android:id="@+id/help"
            android:icon="@drawable/help"
            android:title="@string/navi_help" />
    </group>

    <group
        android:id="@+id/group7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/export"
            android:title="@string/navi_logout" />
    </group>

</menu>