<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/comments"
        android:contentDescription="" />

    <info.hoang8f.widget.FButton
        android:id="@+id/subscribeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/subscribe_to_notification"
        android:textStyle="bold" />

    <info.hoang8f.widget.FButton
        android:id="@+id/notificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/send_notification"
        android:textStyle="bold" />
    <Button
        android:id="@+id/logTokenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/log_token" />


</LinearLayout>