<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:src="@drawable/school_bus_big" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_text"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@color/divider"
        android:hint="@string/login_phone"
        android:paddingLeft="5dp"
        android:textColor="@color/secondaryText" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@color/divider"
        android:hint="@string/login_password"
        android:paddingLeft="5dp"
        android:textColor="@color/secondaryText" />

    <Button
        android:id="@+id/toHome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="120dp"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:text="Login"
        android:textColor="@color/primaryText" />
</LinearLayout>